--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <title>Test Page</title>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io.connect();
-  </script>
+  <script src="/jsm/client.js"></script>
+  <script src="app.js"></script>
 </head>
 <body bgcolor="Orange">
   <font face="Courier" color="green">
